force-app/main/default/objects/KimbleOne__Resource__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Migrated field from Code Zero production.  Unable to match Lookup format to Employee Object as in CodeZero so Text field being created to allow Kimble Config Migration to continue.  Item 2 in Tech Change Log lists original field details.  Created by I. Roemer Sadhana Consulting</description>
    <label>Employee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>