force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__ActiveLicenseType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActiveLicenseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active License Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ActiveLicenseType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>