force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__ActualCostUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualCostUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Cost Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resources (Actual Cost Unit Type)</relationshipLabel>
    <relationshipName>ResourcesActualCost</relationshipName>
    <type>Lookup</type>
</CustomField>