force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__AssignmentDemandFulfilmentMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AssignmentDemandFulfilmentMode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auto Matching Fulfilment Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AssignmentDemandFulfilmentMode</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resource Assignment Demand Fulfilment Mode</relationshipLabel>
    <relationshipName>ResourceAssignmentDemandFulfilmentMode</relationshipName>
    <type>Lookup</type>
</CustomField>