force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__AutoMatchNumberOfCandidates__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AutoMatchNumberOfCandidates__c</fullName>
    <inlineHelpText>Leave blank to use default</inlineHelpText>
    <label>Auto Matching Number of Candidates</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>