force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__AvailabilityScore__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AvailabilityScore__c</fullName>
    <label>Availability Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>