force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__AvailabilityUsagePattern__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AvailabilityUsagePattern__c</fullName>
    <label>Availability Usage Pattern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>