force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__BusinessUnitGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnitGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit Group</label>
    <referenceTo>KimbleOne__BusinessUnitGroup__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>