force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__BusinessUnitSecondary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BusinessUnitSecondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit (Secondary)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__BusinessUnit__c.KimbleOne__IsSecondaryOrganisationalEntity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Resources (Business Unit (Secondary))</relationshipLabel>
    <relationshipName>ResourcesSecondary</relationshipName>
    <type>Lookup</type>
</CustomField>