force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__Calendar__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar</label>
    <referenceTo>KimbleOne__Calendar__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>