force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__ExpenseReimbursementCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseReimbursementCurrencyIsoCode__c</fullName>
    <label>Expense Reimbursement Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>