force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__ExpensesSupplierInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesSupplierInvoiceableAmount__c</fullName>
    <label>Expenses Supplier Invoiceable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>