force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>