force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__Group__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Group__c</fullName>
    <label>Z_Obsolete - Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>