force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__IsActualUntracked__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsActualUntracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actual Untracked?</label>
    <type>Checkbox</type>
</CustomField>