force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__IsCandidate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsCandidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Candidate</label>
    <type>Checkbox</type>
</CustomField>