force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsCurrentUser__c</fullName>
    <formula>IF(KimbleOne__User__r.Id = $User.Id, &quot;Y&quot;, &quot;N&quot;)</formula>
    <label>Is Current User</label>
    <type>Text</type>
</CustomField>