force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__LatestP1AssignmentEndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestP1AssignmentEndDate__c</fullName>
    <label>Assigned Until</label>
    <type>Date</type>
</CustomField>