force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__ManagerIsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ManagerIsCurrentUser__c</fullName>
    <formula>IF(OR(KimbleOne__User__r.ManagerId = $User.Id, KimbleOne__ResourceManager__r.KimbleOne__User__r.Id = $User.Id), &quot;Y&quot;, &quot;N&quot;)</formula>
    <label>Manager Is Current User</label>
    <type>Text</type>
</CustomField>