force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__PortalUser__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PortalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PortalUsers</relationshipName>
    <type>Lookup</type>
</CustomField>