force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__ResourceGroupInclusionMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceGroupInclusionMode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Group Inclusion Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>ResourceGroupInclusionMode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resources (Resource Group Inclusion Mode)</relationshipLabel>
    <relationshipName>ResourceGroupInclusionModes</relationshipName>
    <type>Lookup</type>
</CustomField>