force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__ServicesSupplierInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ServicesSupplierInvoiceableAmount__c</fullName>
    <label>Services Supplier Invoiceable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>