force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__ShareDemandWithConsultants__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShareDemandWithConsultants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish Demand To Consultants</label>
    <type>Checkbox</type>
</CustomField>