force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__StandardCostUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StandardCostUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Cost Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resources (Unit Type)</relationshipLabel>
    <relationshipName>ResourcesStandardCost</relationshipName>
    <type>Lookup</type>
</CustomField>