force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__StandardRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StandardRevenue__c</fullName>
    <label>Standard Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>