force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__StandardRevenueCurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StandardRevenueCurrencyISOCode__c</fullName>
    <label>Standard Revenue Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>