force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__StandardRevenueUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StandardRevenueUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Revenue Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resources (Standard Revenue Unit Type)</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>