force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TargetRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TargetRate__c</fullName>
    <label>Z_Obsolete - Target Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>