force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TargetRateUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TargetRateUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Target Rate Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resources (Target Rate Unit Type)</relationshipLabel>
    <relationshipName>ResourcesTargetRate</relationshipName>
    <type>Lookup</type>
</CustomField>