force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TemporalCostCombinationKey__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalCostCombinationKey__c</fullName>
    <label>Temporal Cost Combination Key</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>