force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TemporalProperties__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalProperties__c</fullName>
    <label>TemporalProperties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>