force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TemporalResourceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalResourceType__c</fullName>
    <label>Temporal Resource Type</label>
    <type>TextArea</type>
</CustomField>