force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TemporalRevenueCombinationKey__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalRevenueCombinationKey__c</fullName>
    <label>Temporal Revenue Combination Key</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>