force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TemporalStandardCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalStandardCost__c</fullName>
    <label>Standard Cost</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>