force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TemporalStandardCostUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalStandardCostUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Cost Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resources (Temporal Standard Cost Unit Type)</relationshipLabel>
    <relationshipName>ResourcesTemporalStandardCostUnitType</relationshipName>
    <type>Lookup</type>
</CustomField>