force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TemporalStandardRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalStandardRevenue__c</fullName>
    <label>Standard Revenue</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>