force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TemporalTimePatternVariant__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TemporalTimePatternVariant__c</fullName>
    <label>Temporal Time Pattern Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>