force-app/main/default/objects/KimbleOne__Resource__c/fields/KimbleOne__TimePatternVariant__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePatternVariant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Pattern Variant</label>
    <referenceTo>KimbleOne__TimePatternVariant__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>