force-app/main/default/objects/KimbleOne__Resource__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ResourceType__c</columns>
    <columns>KimbleOne__BusinessUnit__c</columns>
    <columns>KimbleOne__StartDate__c</columns>
    <columns>KimbleOne__LatestP1AssignmentEndDate__c</columns>
    <columns>KimbleOne__User__c</columns>
    <columns>KimbleOne__Grade__c</columns>
    <columns>KimbleOne__StandardCostUnitType__c</columns>
    <columns>KimbleOne__StandardCost__c</columns>
    <columns>KimbleOne__ExpenseReimbursementCurrencyIsoCode__c</columns>
    <columns>KimbleOne__Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>