force-app/main/default/objects/KimbleOne__Resource__c/listViews/KimbleOne__SupplierInvoiceableResources.listView-meta.xml
<ListView>
    <fullName>KimbleOne__SupplierInvoiceableResources</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ResourceType__c</columns>
    <columns>KimbleOne__BusinessUnit__c</columns>
    <columns>KimbleOne__StartDate__c</columns>
    <columns>KimbleOne__LatestP1AssignmentEndDate__c</columns>
    <columns>KimbleOne__User__c</columns>
    <columns>KimbleOne__Contact__c</columns>
    <columns>KimbleOne__ExpensesSupplierInvoiceableAmount__c</columns>
    <columns>KimbleOne__ServicesSupplierInvoiceableAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Resources for Supplier Invoicing</label>
    <language>en_US</language>
</ListView>